[gd_scene load_steps=2 format=3 uid="uid://bhlr1m3q7ixjg"]

[ext_resource type="Script" uid="uid://c5gy0l8qsi7dk" path="res://src/ui/widgets/custom_item_tooltip.gd" id="1_tooltip"]

[node name="CustomItemTooltip" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tooltip")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ItemName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Item Name"

[node name="ItemType" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "(Consumable)"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 2

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Item description goes here."
autowrap_mode = 3

[node name="ConditionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Condition: 10/20"

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="StatsSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 2

[node name="SellValue" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 0.9, 0.5, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "ðŸª™ Sell Value: 25 gold"
